<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorShade">

    <TextView
        android:text="@string/dialog_title"
        android:textSize="24sp"
        android:padding="8dp"
        android:textColor="#FFF"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_name_hint"
            android:inputType="textCapWords"/>

        <EditText
            android:id="@+id/healthInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_health_hint"
            android:inputType="number"/>

        <EditText
            android:id="@+id/manaInput"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_mana_hint"/>

        <EditText
            android:id="@+id/tpInput"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_tp_hint"/>

    </LinearLayout>


</LinearLayout>